# image-watermark

./: Cargo.toml  LICENSE.md  Makefile  README.md
src/: main.rs
src/services/: image_processing.rs  image_processing_unit_test.rs
tests/: image_processing_integration_test.rs  image_processing_test.rs
