[package]
name = "image-watermark"
version = "0.1.0"
edition = "2018"
authors = ["Tran Sy Bao"]
rust-version = "1.66.0"
autobins = false
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
photon-rs = "0.3.1"
image = "0.24.5"

[[bin]]
name = "test"
test = false
benches = false

[[bin]]
name = "photon_test"
test = false
benches = false
