[package]
name = "image-watermark"
version = "1.0.0"
edition = "2018"
authors = ["Tran Sy Bao"]
rust-version = "1.66.0"
autobins = false # To prevent Cargo from inferring src/bin/*.rs as an executable
autotests = false
autobenches = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
photon-rs = "0.3.1"

# [[bin]]
# name = "test"
# test = false
# bench = false

[[bin]]
name = "image_processing"
test = false
bench = false

[[bin]]
name = "image_watermark"
test = false
bench = false
path = "src/main.rs"
